maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:35: error: value && is not a member of Int
	if(a=0 && isDirLibre(Direction.OUEST)){
               ^Escaper:35: error: type mismatch;
 found   : Unit
 required: Boolean
	if(a=0 && isDirLibre(Direction.OUEST)){
            ^